(dirs tools client assets)

(executables
    (names myapp)
    (modes (byte plugin) (native plugin))
    (libraries eliom.server ocsigen-start.server ocsipersist.pgsql)
    (preprocess
       (pps
           lwt_ppx
           pgocaml_ppx
           js_of_ocaml-ppx_deriving_json
           ocsigen-i18n
           ocsigen-ppx-rpc
           eliom.ppx.server
           -- --prefix Myapp_ --suffix _i18n --default-module Myapp_i18n
       )
    )
  )

(rule (target myapp_i18n.eliom) (deps assets/myapp_i18n.tsv)
  (action
    (with-stdout-to %{target}
      (with-stdin-from %{deps}
        (pipe-stdout
          (run ocsigen-i18n-generator --languages en,fr --default-language fr %{deps})
          (run sed "1 s/]/[@@deriving json]]\\n[%%shared [@@@ocaml.warning\"-27\"]]/"))))))

(rule (target myapp_Demo_i18n.eliom) (deps assets/myapp_Demo_i18n.tsv)
  (action
    (with-stdout-to %{target}
      (with-stdin-from %{deps}
        (run ocsigen-i18n-generator --primary myapp_i18n.tsv --languages en,fr --default-language fr)))))

(rule (alias myapp)
   (deps myapp.cma client/myapp.bc client/myapp.bc.js tools/check_modules.ml)
   (action (run ocaml tools/check_modules.ml myapp)))

(env (_ (flags (:standard -w -9-37-39))))
